; ModuleID = '/home/carl/AnghaBench/linux/drivers/mailbox/extr_omap-mailbox.c_omap_mbox_disable_irq.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mailbox/extr_omap-mailbox.c_omap_mbox_disable_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mbox_chan = type { i32 }
%struct.omap_mbox = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @omap_mbox_disable_irq(%struct.mbox_chan* %0, i32 %1) #0 {
  %3 = alloca %struct.mbox_chan*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.omap_mbox*, align 8
  store %struct.mbox_chan* %0, %struct.mbox_chan** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.mbox_chan*, %struct.mbox_chan** %3, align 8
  %7 = call %struct.omap_mbox* @mbox_chan_to_omap_mbox(%struct.mbox_chan* %6)
  store %struct.omap_mbox* %7, %struct.omap_mbox** %5, align 8
  %8 = load %struct.omap_mbox*, %struct.omap_mbox** %5, align 8
  %9 = icmp ne %struct.omap_mbox* %8, null
  %10 = xor i1 %9, true
  %11 = zext i1 %10 to i32
  %12 = call i64 @WARN_ON(i32 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %2
  br label %19

15:                                               ; preds = %2
  %16 = load %struct.omap_mbox*, %struct.omap_mbox** %5, align 8
  %17 = load i32, i32* %4, align 4
  %18 = call i32 @_omap_mbox_disable_irq(%struct.omap_mbox* %16, i32 %17)
  br label %19

19:                                               ; preds = %15, %14
  ret void
}

declare dso_local %struct.omap_mbox* @mbox_chan_to_omap_mbox(%struct.mbox_chan*) #1

declare dso_local i64 @WARN_ON(i32) #1

declare dso_local i32 @_omap_mbox_disable_irq(%struct.omap_mbox*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
